@@ -12,7 +12,7 @@ plugins {
 }
 
 ext {
-	flinkVersion = '1.18.1'
+	flinkVersion = '1.19.0'
 	scalaBinaryVersion = '_2.12'
 	slf4jVersion = '1.7.36'
 	log4jVersion = '2.17.1'
@@ -57,14 +57,25 @@ configurations {
 
 
 dependencies {
+	// https://mvnrepository.com/artifact/org.apache.kafka/kafka
+//	implementation group: 'org.apache.kafka', name: 'kafka_2.13', version: '3.7.0'
+
+//	implementation 'org.apache.kafka:kafka_2.13:3.7.0'
+//	implementation 'org.apache.kafka:kafka-clients:3.6.2'
+//	implementation 'org.springframework.kafka:spring-kafka:3.0.1'
+
+
+	// https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams-test-utils
+	testImplementation group: 'org.apache.kafka', name: 'kafka-streams-test-utils', version: '3.7.0'
+
 	implementation 'io.r2dbc:r2dbc-spi:0.9.0.RELEASE' // Check for the latest version
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.apache.kafka:kafka-streams'
-	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.apache.kafka:kafka-streams:3.7.0'
+	implementation 'org.springframework.kafka:spring-kafka:3.1.4'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test:3.1.4'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2'
 	implementation 'org.projectlombok:lombok:1.18.28'
@@ -89,12 +100,16 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.32'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
 
+	// Flink test utils
+	testImplementation "org.apache.flink:flink-test-utils:${flinkVersion}"
+	testCompileOnly "org.apache.flink:flink-test-utils:${flinkVersion}"
+
 	// For kafka client:
 	implementation group: 'org.apache.flink', name: 'flink-core', version: "${flinkVersion}"
 	implementation group: 'org.apache.flink', name: 'flink-queryable-state-client-java', version: "${flinkVersion}"
 	implementation "org.apache.flink:flink-queryable-state-runtime:${flinkVersion}"
-	implementation 'org.apache.kafka:kafka-streams:3.4.0'
-	implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
+//	implementation 'org.apache.kafka:kafka-streams:3.7.0'
+	implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '3.7.0'
 	implementation group: 'com.giladam', name: 'kafka-jackson-serde', version: '1.0.0'
 }
 
@@ -121,6 +136,12 @@ shadowJar {
 
 test {
 	useJUnitPlatform()
+
+	// modify jvmArgs (needed by Flink tests)
+	jvmArgs += [
+			'--add-opens=java.base/java.util=ALL-UNNAMED',
+			'--add-opens=java.base/java.lang=ALL-UNNAMED'
+	]
 }
 
 jacoco {
